WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141265
WKTR should not use -mainScreen to pick a color profile
https://bugs.webkit.org/show_bug.cgi?id=141265
Summary
WKTR should not use -mainScreen to pick a color profile
Simon Fraser (smfr)
Reported
2015-02-04 14:47:46 PST
WKTR should not use -mainScreen to pick a color profile
Attachments
Patch
(3.85 KB, patch)
2015-02-04 14:48 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-02-04 14:48:44 PST
Created
attachment 246055
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-02-04 14:58:48 PST
https://trac.webkit.org/r179639
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug