WKTR should not use -mainScreen to pick a color profile https://bugs.webkit.org/show_bug.cgi?id=141265

Reviewed by Tim Horton.

-[NSScreen mainScreen] depends on the active window, so use the first screen
(which is the one we put the window on anyway).

Do some cleanup in DRT that makes the code look similar.

* DumpRenderTree/mac/DumpRenderTree.mm:
(createWebViewAndOffscreenWindow):
* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(WTR::PlatformWebView::PlatformWebView):

Canonical link: https://commits.webkit.org/159281@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179639 268f45cc-cd09-0410-ab3c-d52691b4dbfc